# price-scraper

./: .env.exemple  .gitignore  README.md  insert_test.py  pyproject.toml  railway.toml
price_scraper/: __init__.py  app.py  database.py  notifier.py  sheets.py  spider_runner.py
price_scraper/spiders/: __init__.py  middlewares.py  price_spider.py  settings.py
templates/: dashboard.html
